--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,6 @@
-.img .item {
+.item {
   display: flex;
-  width: 120 px;
-  height: 120 px;
   margin-right: 40px;
-  margin-bottom: 40px;
 }
 
 #validation-input {
